2010-11-13  Romain Francois <romain@r-enthusiasts.com>

    * inst/include/Rcpp/Module.h: expose constructors as the "cpp_constructor"
    field of "C++ClassRepresentation" and the "constructors" slot of 
    "C++Class"

2010-11-07  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/operators/minus.h: fixed Minus_Vector_Primitive<RTYPE,false,T>

	* inst/unitTests/runit.sugar.R: new test for the above

2010-11-05  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Module.h: exposing multiple constructors in modules

	* src/Module.cpp: The mangled class name is now "Rcpp_" plus the class
	name. The previous version used the address of the external pointer to the
	module, which was not constant.

2010-11-04  Douglas Bates  <bates@stat.wisc.edu>

	* inst/include/Rcpp/module/Module_generated_Constructor.h: remove
	redundant 'return's.

2010-11-04  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Module.h: experimental way to specify which constructor
	to use in classes exposed by modules. This is still too restrictive
	as it only allows one constructor.

	* inst/include/Rcpp/sugar/block/SugarMath.h: extend the SUGAR_MATH_1 macro
	so that we can apply functions (e.g. sqrt) directly on SEXP

2010-11-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Release 0.8.8

        * debian/*: Similarly updated for new release to Debian

2010-10-30  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: New define IS_GCC_450_OR_LATER
	* inst/include/Rcpp/Extractor.h: Do not enable Rcpp::Fast if g++
	4.5.0 or later is used -- we need to figure out what upsets it

2010-10-23  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/MatrixRow.h: Faster row indexing

	* inst/include/Rcpp/vector/Matrix.h: added use of _ to get columns
	and rows of a matrix. For example if x is a NumericMatrix, x(_,i)
	returns the same as x.column(i) and x(i,_) returns the same as
	x.row(i)
