@@ -28,5 +28,6 @@
 #include <Rcpp/sugar/matrix/lower_tri.h>
 #include <Rcpp/sugar/matrix/upper_tri.h>
 #include <Rcpp/sugar/matrix/diag.h>
+#include <Rcpp/sugar/matrix/as_vector.h>
 
 #endif
